--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
     "winston": "^3.11.0",
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.10.6",
-    "typescript": "^5.3.3",
     "tsx": "^4.7.0"
   }
 }
