--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,23 @@
-# Vercel MCP Server Configuration
+# CR AudioViz AI - Environment Variables
+# ======================================
+# Copy this file to .env.local and fill in your values
+# NEVER commit .env files to git
 
-# Vercel Access Token (required)
-# Generate at: https://vercel.com/account/tokens
-VERCEL_TOKEN=RhgnWLjELK2FKEXpm57R1Dwj
+# Supabase (Bootstrap - Required)
+NEXT_PUBLIC_SUPABASE_URL=https://kteobfyferrukqeolofj.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_PROJECT_REF=kteobfyferrukqeolofj
 
-# MCP API Key for authentication (required)
-# Generate a secure random string
-MCP_API_KEY=your_secure_api_key_here
+# NextAuth (Bootstrap - Required)
+NEXTAUTH_SECRET=your_nextauth_secret_here
+NEXTAUTH_URL=http://localhost:3000
 
-# Server Port (optional)
-PORT=3002
+# GitHub (For deployments)
+GITHUB_TOKEN=your_github_token_here
 
-# Node Environment
-NODE_ENV=production
+# Vercel (For deployments)
+VERCEL_TOKEN=your_vercel_token_here
+
+# All other credentials are fetched from platform_secrets table
+# Do not add API keys here - they belong in platform_secrets
